[package]
name = "porthole"
version = "0.1.0"
edition = "2021"
description = "An animated, color-coded certificate-chain tree for your terminal"
license = "MIT"
repository = "https://github.com/ctkrug/porthole"
keywords = ["tls", "certificate", "tui", "ssl", "security"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
x509-parser = { version = "0.16", features = ["verify"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pki-types = "1"
webpki-roots = "0.26"
time = { version = "0.3", features = ["formatting", "macros"] }

[dev-dependencies]
proptest = "1.11.0"
rcgen = "0.13"
